--- a/FinanceTracker/ClientApp/src/components/Dashboard.css
+++ b/FinanceTracker/ClientApp/src/components/Dashboard.css
@@ -23,6 +23,10 @@
     margin: 25vh auto 3vh auto;
 }
 
+a {
+    text-decoration: none;
+}
+
 #dashboard p {
     color: #CCCCCC;
     width:fit-content;
@@ -63,5 +67,4 @@
 .budget {
     margin: auto;
 }
-
 
