--- a/FinanceTracker/ClientApp/src/components/Dashboard.css
+++ b/FinanceTracker/ClientApp/src/components/Dashboard.css
@@ -1,5 +1,5 @@
 ﻿
-#dashboard{
+#dashboard {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -8,7 +8,7 @@
 .dashboard-bg {
     background-image: linear-gradient(to right bottom, #000000, #2a0c12, #4b0816, #6c0112, #8b0000);
     min-width: 100vw;
-    min-height: 50vh;
+    max-height: auto;
     padding: 10px 50px;
 }
 
