--- a/FinanceTracker/ClientApp/src/custom.css
+++ b/FinanceTracker/ClientApp/src/custom.css
@@ -17,8 +17,17 @@ code {
   border-color: #1861ac;
 }
 
-/*LOADER ICON*/
-.loader {
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                          supported by Chrome, Edge, Opera and Firefox */
+}
+
+    /*LOADER ICON*/
+    .loader {
     display: inline-block;
     position: relative;
     width: 80px;
