--- a/FinanceTracker/ClientApp/src/components/AddBudget.css
+++ b/FinanceTracker/ClientApp/src/components/AddBudget.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    border: 2px solid;
 }
 
 .add-budget-btn {
@@ -23,6 +22,11 @@
     flex-direction: column;
     transition: 0.3s;
     max-height: 50vh;
+    width: 55vw;
+    padding-top: 20px;
+    margin: auto auto 20px auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 20px;
 }
 
 .form-label {
@@ -34,7 +38,7 @@
 }
 
 .form-input, .submit-btn {
-    width: fit-content;
+    max-width: fit-content;
     margin: 5px auto 5px auto;
 }
 
