--- a/FinanceTracker/ClientApp/src/components/BudgetItem.css
+++ b/FinanceTracker/ClientApp/src/components/BudgetItem.css
@@ -1,3 +1,29 @@
 ﻿
 .budget-item {
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 18px;
+    width: 30%;
+    min-width: 275px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.budget-item h4 {
+    margin-bottom: 50px;
+}
+
+.delete-btn {
+    color: red;
+    margin-left: auto;
+    height: 20px;
+    width: 20px;
+    font-size: large;
+    font-weight: 600;
+}
+
+.delete-btn:hover{
+    cursor: pointer;
+    font-weight: 700;
 }
