--- a/FinanceTracker/ClientApp/src/components/AddCategory.css
+++ b/FinanceTracker/ClientApp/src/components/AddCategory.css
@@ -1,18 +1,11 @@
 ﻿
-#add-budget {
+#add-category {
     display: flex;
     flex-direction: column;
     overflow: hidden;
 }
 
-#max-budgets {
-    text-align: center;
-    color: #AAAAAA;
-    margin: 30px auto 8px auto;
-    text-decoration: underline;
-}
-
-.add-budget-btn {
+.add-category-btn {
     color: #CCCCCC;
     width: fit-content;
     margin: auto;
@@ -20,12 +13,12 @@
     cursor: pointer;
 }
 
-.add-budget-btn:hover {
+.add-category-btn:hover {
     color: #FFFFFF;
     font-weight: 500;
 }
 
-.add-budget-form {
+.add-category-form {
     display: flex;
     flex-direction: column;
     transition: 0.3s;
@@ -37,37 +30,16 @@
     border-radius: 20px;
 }
 
-.form-label {
-    color: #CCCCCC;
-    font-size: x-large;
-    width: fit-content;
-    margin: 0px auto 5px auto;
-}
-
-.form-input, .submit-btn {
-    max-width: fit-content;
-    margin: 5px auto 5px auto;
-}
-
 .hide {
     opacity: 0;
     max-height: 0;
 }
 
-#budget-error-msg {
+#category-error-msg {
     color: #CCCCCC;
     margin: 5px auto 5px auto;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
+.form-input {
+    margin-bottom: 15px;
+}
