Created CategoryInfo.js component to display a users categories within their selected budget.

--- a/FinanceTracker/ClientApp/src/components/AddBudget.css
+++ b/FinanceTracker/ClientApp/src/components/AddBudget.css
@@ -28,7 +28,7 @@
 .add-budget-form {
     display: flex;
     flex-direction: column;
-    transition: 0.3s;
+    transition: .3s;
     max-height: 50vh;
     width: 55vw;
     padding-top: 20px;
