Added SelectedBudgetRedirect.js to prevent errors when manually typing in URL. Also modified and cleaned up code in SelectedBudget.js.

--- a/FinanceTracker/ClientApp/src/components/SelectedBudget.css
+++ b/FinanceTracker/ClientApp/src/components/SelectedBudget.css
@@ -29,3 +29,15 @@
     color: #CCCCCC;
 }
 
+#manage-categories-btn {
+    color: #CCCCCC;
+    width: fit-content;
+    margin: auto;
+    padding: 5px;
+    cursor: pointer;
+}
+
+#manage-categories-btn:hover {
+    color: #FFFFFF;
+    font-weight: 500;
+}
