--- a/FinanceTracker/ClientApp/src/components/CategoryInfo.css
+++ b/FinanceTracker/ClientApp/src/components/CategoryInfo.css
@@ -2,14 +2,16 @@
 .no-categories {
     width: auto;
     padding: 15px;
-    margin-top: 25px;
+    margin-top: 30px;
     text-align: center;
+    color: #262626;
 }
 
 .no-categories div {
     margin-top: 50px;
     text-decoration: underline;
     font-weight: 700;
+    font-size: 20px;
 }
 
 .category-info {
@@ -18,4 +20,10 @@
     width: 100vw;
     text-align: center;
     padding: 10px 35px 10px 35px;
+}
+
+.category-info h2 {
+    color: #4c4c4c;
+    margin-top: 25px;
+    margin-bottom: 35px;
 }
