--- a/FinanceTracker/ClientApp/src/components/CategoryItem.css
+++ b/FinanceTracker/ClientApp/src/components/CategoryItem.css
@@ -1,4 +1,85 @@
 ﻿
 .category-item {
-    
+    background-color: #50020f;
+    color: #DDDDDD;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 8px 20px;
+    border-radius: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 75vw;
+    margin: 7px auto 7px auto;
+    min-height: 85px;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.category-name {
+    width: 30%;
+    padding: 3px;
+    overflow: hidden;
+    text-overflow:ellipsis;
+}
+
+.category-total {
+    width: 30%;
+    margin-bottom: 5px;
+}
+
+.category-options {
+    display: flex;
+    justify-content: center;
+    width: 20%;
+    align-items: center;
+}
+
+.modify-category-icon {
+    color: cornflowerblue;
+    position: absolute;
+    margin-right: 75px;
+}
+
+.delete-category-icon {
+    color: red;
+    position: absolute;
+    margin-left: 75px;
+    z-index: 2;
+}
+
+.delete-icon-bg {
+    position: absolute;
+    margin-left: 80px;
+    width: 15px;
+    height: 15px;
+    background-color: #CCCCCC;
+    z-index: 1;
+}
+
+.modify-category-icon:hover, .delete-category-icon:hover {
+    cursor: pointer;
+    font-size: larger;
+}
+
+@media only screen and (max-width: 1000px) {
+    .category-item {
+        flex-direction: column;
+        padding: 8px;
+        max-width: 500px;
+    }
+
+    .category-name {
+        width: 100%;
+    }
+
+    .category-total {
+        width: 100%;
+        
+    }
+
+    .category-options {
+        margin-top: 10px;
+        border-top: 2px solid #BBBBBB;
+        padding: 25px 15px 15px 15px;
+        width: 50%;
+    }
 }
