--- a/FinanceTracker/ClientApp/src/components/ModifyCategoryModal.css
+++ b/FinanceTracker/ClientApp/src/components/ModifyCategoryModal.css
@@ -3,7 +3,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-width: 45vw;
+    width: 80vw;
+    max-width: 750px;
+    
     border: 1px solid #fff;
     background: #fff;
     border-radius: 18px;
@@ -20,3 +22,4 @@
 #modify-category-form h4 {
     text-decoration: underline;
 }
+
