--- a/FinanceTracker/ClientApp/src/custom.css
+++ b/FinanceTracker/ClientApp/src/custom.css
@@ -36,6 +36,20 @@ code {
                           supported by Chrome, Edge, Opera and Firefox */
 }
 
+.delete-btn {
+    color: red;
+    margin: 0 0 5px auto;
+    height: 20px;
+    width: 20px;
+    font-size: large;
+    font-weight: 600;
+}
+
+.delete-btn:hover{
+    cursor: pointer;
+    font-weight: 700;
+}
+
 /*LOADER ICON*/
 .loader {
     display: inline-block;
