--- a/FinanceTracker/ClientApp/src/components/ModifyCategoryModal.css
+++ b/FinanceTracker/ClientApp/src/components/ModifyCategoryModal.css
@@ -5,7 +5,6 @@
     transform: translate(-50%, -50%);
     width: 80vw;
     max-width: 750px;
-    
     border: 1px solid #fff;
     background: #fff;
     border-radius: 18px;
@@ -17,9 +16,16 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: center;
 }
 
-#modify-category-form h4 {
-    text-decoration: underline;
+#modify-category-form label {
+    font-weight: 500;
 }
+
+#modify-category-form input {
+    width: 150px;
+    margin: auto;
+}
+
 
