--- a/FinanceTracker/ClientApp/src/components/BudgetItem.css
+++ b/FinanceTracker/ClientApp/src/components/BudgetItem.css
@@ -2,29 +2,30 @@
 .budget-item {
     display: flex;
     flex-direction: column;
-    background-color: #50020f;
-    color: #DDDDDD;
+    background-color: #daf0fd;
+    color: #341542;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 8px 20px;
     border-radius: 18px;
     width: 30%;
-    min-width: 275px;
-    padding: 15px;
+    min-width: 250px;
     margin: 10px;
+    padding-bottom: 10px;
     transition: .1s;
+    align-items: center;
 }
 
 .budget-item:hover {
     box-shadow: rgba(0, 0, 0, 0.5) 0px 10px 25px;
 }
 
-.budget-item h4 {
-    margin-bottom: 50px;
-    overflow: hidden;
-    text-overflow: ellipsis;
+.redirect-link {
+    width: 100%;
+    padding-bottom: 15px;
+    cursor: pointer;
 }
 
-.budget-link {
-    margin: 5px;
-    cursor: pointer;
-    padding: 5px;
+.budget-item h4 {
+    margin: 20px 20px 30px 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
