--- a/FinanceTracker/ClientApp/src/components/CategoryItem.css
+++ b/FinanceTracker/ClientApp/src/components/CategoryItem.css
@@ -1,17 +1,24 @@
 ﻿
 .category-item {
-    background-color: #50020f;
-    color: #DDDDDD;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 8px 20px;
+    /*background-color: #50020f;
+    color: #DDDDDD;*/
+    background-color: #daf0fd;
+    color: #341542;
     border-radius: 18px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 75vw;
-    margin: 7px auto 7px auto;
+    margin: 7px auto 15px auto;
     min-height: 85px;
     font-size: 25px;
     font-weight: 600;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 8px 8px;
+    transition: box-shadow linear .15s;
+}
+
+.category-item:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 8px 8px;
 }
 
 .category-name {
@@ -40,12 +47,5 @@
     .category-total {
         width: 100%;
         
-    }
-
-    .category-options {
-        margin-top: 10px;
-        border-top: 2px solid #BBBBBB;
-        padding: 25px 15px 15px 15px;
-        width: 50%;
     }
 }
