--- a/FinanceTracker/ClientApp/src/components/Dashboard.css
+++ b/FinanceTracker/ClientApp/src/components/Dashboard.css
@@ -1,21 +1,27 @@
 ﻿
 #dashboard {
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+}
+
+
+.dashboard-bg {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #85cff9;
+    width: 100vw;
     min-height: 100vh;
+    padding: 5px 50px;
 
 }
 
-.dashboard-bg { /*
-    background-image: linear-gradient(to right bottom, #000000, #2a0c12, #4b0816, #6c0112, #8b0000);*/
-    background-color: #85cff9;
-    min-width: 100vw;
-    padding: 5px 50px;
-    border-bottom:4px solid #341542;
-    box-shadow: 0px 20px 24px 5px rgba(25,118,210,0.15);
-    margin-bottom: 50px;
-    
+.dashboard-bg hr {
+    border: 2px solid;
+    width: 100vw;
+    opacity: .5;
+    color: #FFF;
 }
 
 .title {
