--- a/FinanceTracker/ClientApp/src/components/SelectedBudget.css
+++ b/FinanceTracker/ClientApp/src/components/SelectedBudget.css
@@ -5,28 +5,34 @@
     align-items: center;
 }
 
-.budget-title {
-    background-image: linear-gradient(to right bottom, #000000, #2a0c12, #4b0816, #6c0112, #8b0000);
-    min-width: 100vw;
-    padding: 5px 50px 20px;
+.selected-budget-bg {
+    /*background-image: linear-gradient(to right bottom, #000000, #2a0c12, #4b0816, #6c0112, #8b0000);*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #85cff9;
+    width: 100vw;
+    min-height: 100vh;
+    padding: 5px 50px 50px;
     text-align: center;
-    color: #DDDDDD;
-}
-
-.return-link {
-    color: #BBBBBB;
-    text-decoration: none;
-}
-
-.return-link:hover {
-    color: #DDDDDD;
-    font-weight: 500;
+    color: #341542;
+    
+    
 }
 
 .date-modified {
-    margin: 30px 0 50px 0;
-    color: #CCCCCC;
+    margin: 10px 0 25px 0;
+    color: #fff;
 }
+
+.selected-budget-bg hr {
+    width: 100vw;
+    border: 2px solid;
+    opacity: .5;
+    color: #FFF;
+}
+
+
 
 #manage-categories-btn {
     color: #CCCCCC;
