--- a/FinanceTracker/ClientApp/src/custom.css
+++ b/FinanceTracker/ClientApp/src/custom.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 html {
     width: 100%;
     overflow-x: hidden;
@@ -17,8 +19,16 @@ a {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
+input:focus {
+    outline: none;
+}
+
 code {
   color: #E01A76;
+}
+
+body {
+    font-family: "Roboto", sans-serif;
 }
 
 .btn-primary {
