Created ModifyBudgetModal.js which returns a functional popup modal that allows a user to modify their Budget name.

--- a/FinanceTracker/ClientApp/src/components/Dashboard.css
+++ b/FinanceTracker/ClientApp/src/components/Dashboard.css
@@ -22,20 +22,25 @@
     width: 100vw;
     opacity: .5;
     color: #FFF;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
+}
+
+.dashboard-bg h3 {
+
 }
 
 .title {
     color: #341542;
     text-align: center;
-    margin: 0 auto 25vh auto;
+    margin: 0 auto 125px auto;
+    text-decoration: underline;
 }
 
 
 .budget-count {
     color: #341542;
     text-align: center;
-    margin: 0 auto 25px auto;
+    margin: 0 auto 50px auto;
 }
 
 
