--- a/FinanceTracker/ClientApp/src/components/BudgetInfo.css
+++ b/FinanceTracker/ClientApp/src/components/BudgetInfo.css
@@ -2,16 +2,11 @@
 .no-budgets {
     width: auto;
     padding: 15px;
-    margin-top: 30px;
+    margin-top: 75px;
     text-align: center;
-    color: #262626;
-}
-
-.no-budgets div {
-    margin-top: 50px;
+    /*color: #262626;*/
+    color: #f5f9fc;
     text-decoration: underline;
-    font-weight: 700;
-    font-size: 20px;
 }
 
 .budget-info {
@@ -23,6 +18,7 @@
     padding: 10px 35px 10px 35px;
     align-content: center;
     text-align: center;
+    margin-top: 25px;
 }
 
 
