--- a/FinanceTracker/ClientApp/src/components/Buttons.css
+++ b/FinanceTracker/ClientApp/src/components/Buttons.css
@@ -25,6 +25,14 @@
     font-size: large;
 }
 
+.primary-btn {
+    height: 100%;
+}
+
+.refresh-icon {
+    height: 100%;
+}
+
 .modify-icon {
     color: #1565c0;
 }
