Created PurchaseItem.js to show a list of user purchases for a given month. Also modified PurchaseInfo.js to include a month with a selector to allow users to view purchases from past months. PurchasesController.cs & CategoriesController.cs now only return data for the provided month/year.

--- a/FinanceTracker/ClientApp/src/components/AddPurchaseForm.css
+++ b/FinanceTracker/ClientApp/src/components/AddPurchaseForm.css
@@ -69,11 +69,11 @@
     height: 38px;
     width: 140px;
     justify-content: space-between;
+    margin-bottom: 5px;
 }
 
 .success-msg {
     color: #00be21;
-    margin-top: 8px;
     max-width: 325px;
     width: 70vw;
     overflow: hidden;
