Modified PurchaseInfo.js to only display a loading icon in the purchases table while purchases are loading. Also modified AddPurchaseForm.js to be disabled while categories are loading.

--- a/FinanceTracker/ClientApp/src/components/AddPurchaseForm.css
+++ b/FinanceTracker/ClientApp/src/components/AddPurchaseForm.css
@@ -32,14 +32,14 @@
     border: 2px solid #daf0fd;
     border-radius: 8px;
     text-align: center;
-    color: #85cff9;
+    color: #6d6d6d;
     width: 175px;
     padding-left: 27px;
     padding-right: 27px;
 }
 
 .add-purchase-input input::placeholder {
-     color: #85cff9;
+     color: #6d6d6d;
 }
 
 .add-purchase-input select {
@@ -47,7 +47,7 @@
     border: 2px solid #daf0fd;
     border-radius: 8px;
     text-align: center;
-    color: #85cff9;
+    color: #6d6d6d;
     width: 175px;
     outline: none;
     padding: 3px;
