--- a/FinanceTracker/ClientApp/src/custom.css
+++ b/FinanceTracker/ClientApp/src/custom.css
@@ -46,7 +46,7 @@ body {
                           supported by Chrome, Edge, Opera and Firefox */
 }
 
-/*LOADER ICON*/
+/*CIRCULAR LOADER ICON */
 .loader {
     display: inline-block;
     position: relative;
@@ -64,7 +64,7 @@ body {
     border: 8px solid #fff;
     border-radius: 50%;
     animation: loader 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #c20113 transparent transparent transparent;
+    border-color: #1565c0 transparent transparent transparent;
 }
 
 .loader div:nth-child(1) {
@@ -86,5 +86,41 @@ body {
 
     100% {
         transform: rotate(360deg);
+    }
+}
+
+
+
+
+/*SPINNER LOADING ICON*/
+.spinner-loader {
+    width: 40px;
+    aspect-ratio: 1;
+    display: grid;
+    border-radius: 50%;
+    background: linear-gradient(0deg,rgb(218 240 253/50%) 30%,#0000 0 70%,rgb(218 240 253/100%) 0) 50%/8% 100%, linear-gradient(90deg,rgb(218 240 253/25%) 30%,#0000 0 70%,rgb(218 240 253/75% ) 0) 50%/100% 8%;
+    background-repeat: no-repeat;
+    animation: l23 1s infinite steps(12);
+    margin: auto;
+}
+
+    .spinner-loader::before,
+    .spinner-loader::after {
+        content: "";
+        grid-area: 1/1;
+        border-radius: 50%;
+        background: inherit;
+        opacity: 0.915;
+        transform: rotate(30deg);
+    }
+
+    .spinner-loader::after {
+        opacity: 0.83;
+        transform: rotate(60deg);
+    }
+
+@keyframes l23 {
+    100% {
+        transform: rotate(1turn)
     }
 }
